src/main/java/com/example/integradora5d/error/GlobalErrorHandler.java
package com.example.integradora5d.error;

public class GlobalErrorHandler {
}
